objects/ODT_Trial_Reason_Codes__mdt.object
<CustomObject>
    <description>This metadata stores the invalid reason codes for lapsed accounts required for CXD ODT project.</description>
    <fields>
        <fullName>ODT_Reason_Code__c</fullName>
        <label>ODT Reason Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ODT_Reason_Description__c</fullName>
        <label>ODT Reason Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ODT_Reason_Validity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ODT Reason Validity</label>
        <type>Checkbox</type>
    </fields>
    <label>ODT Trial Reason Codes</label>
    <pluralLabel>ODT Trial Reason Codes</pluralLabel>
</CustomObject>